--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,33 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+
+-   repo: 'https://github.com/PyCQA/isort'
+    rev: v5.13.2
+    hooks:
+    -   id: isort
+        name: isort
+        entry: isort --tc --lines-after-imports=2 ./code
+        language: system
+        types: [ python ]
+        pass_filenames: false
+
+-   repo: 'https://github.com/psf/black'
+    rev: v24.4.2
+    hooks:
+    -   id: black
+        name: black
+        entry: black --line-length=79 ./code
+        language: system
+        types: [ python ]
+        pass_filenames: false
+
+-   repo: 'https://github.com/PyCQA/flake8'
+    rev: v7.0.0
+    hooks:
+    -   id: flake8
+        name: flake8
+        entry: flake8 ./code
+        language: system
+        types: [ python ]
+        pass_filenames: false
